--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .logo {
-    height: 100px;
+    height: 140px;
+
 }
+
 
 .head {
     background-color: #0e2c46;
     height: 100px;
+
 }
 
 #back {
@@ -36,10 +39,10 @@
 .text_container3 {
     position: relative;
     z-index: 1;
-    background-color: white;
+    /* background-color: white; */
     border-radius: 20px;
     text-align: center;
-    opacity: 0.80;
+    background-color: rgba(255, 255, 255, 0.80);
 }
 
 .text_container {
@@ -57,7 +60,7 @@
     /* padding-top: 30vh; */
     /* margin-top: 1%; */
     margin-left: 9%;
-    opacity: 0.80;
+
 }
 
 .text_container3 {
@@ -77,7 +80,8 @@
 
 .content {
     font-size: 100px;
-    color: plum;
+    color: #A94A4A;
+    font-family: cursive;
 
 }
 
@@ -93,4 +97,27 @@
     padding: 50px;
     margin: 0;
     color: white;
+}
+
+.login,
+.signin {
+    margin-top: 40px;
+    border-radius: 40px;
+    background-color: palegoldenrod;
+    padding: 10px 10px 10px 10px;
+    font-size: 15px;
+    font-style: italic;
+    color: black;
+    border: palegreen solid 9px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+
+.login {
+    margin-right: 100px;
+}
+
+.text_box {
+    padding-top: 20px;
+    line-height: 40px;
 }
